--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D48062E44733DA9FF95609B7D5B614B8
-ProjectName=Third Person BP Game Template
+ProjectName=Thunder Game
+
