--- a/MyTPS.uproject
+++ b/MyTPS.uproject
@@ -18,6 +18,10 @@
 		{
 			"Name": "AnimationWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
