--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Locomotion.Sneaking",DevComment="")
 +GameplayTagList=(Tag="State.Locomotion.Walking",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Falling",DevComment="")
++GameplayTagList=(Tag="State.Movement.Idle",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Moving",DevComment="")
 +GameplayTagList=(Tag="State.Stance.Crouching",DevComment="")
 +GameplayTagList=(Tag="State.Stance.Proning",DevComment="")
