--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -10,6 +11,11 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ammo.Type.Handgun",DevComment="")
++GameplayTagList=(Tag="Ammo.Type.Shortgun",DevComment="")
++GameplayTagList=(Tag="Item.Type.Ammo",DevComment="")
++GameplayTagList=(Tag="Item.Type.Consumable",DevComment="")
++GameplayTagList=(Tag="Item.Type.Weapon",DevComment="")
 +GameplayTagList=(Tag="State.Locomotion.Running",DevComment="")
 +GameplayTagList=(Tag="State.Locomotion.Sneaking",DevComment="")
 +GameplayTagList=(Tag="State.Locomotion.Walking",DevComment="")
