--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,8 +10,9 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagRedirects=(OldTagName="Ammo.Type.Shortgun",NewTagName="Ammo.Type.Shotgun")
 +GameplayTagList=(Tag="Ammo.Type.Handgun",DevComment="")
-+GameplayTagList=(Tag="Ammo.Type.Shortgun",DevComment="")
++GameplayTagList=(Tag="Ammo.Type.Shotgun",DevComment="")
 +GameplayTagList=(Tag="Item.Type.Ammo",DevComment="")
 +GameplayTagList=(Tag="Item.Type.Consumable",DevComment="")
 +GameplayTagList=(Tag="Item.Type.Weapon",DevComment="")
